--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/qrcode": "^1.5.0",
+    "express": "^4.18.2",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "qrcode": "^1.5.0",
-    "stream": "^0.0.2"
+    "qrcode": "^1.5.0"
   }
 }
